--- a/force-app/main/default/classes/LeadStatusHelper.cls
+++ b/force-app/main/default/classes/LeadStatusHelper.cls
@@ -16,11 +16,9 @@ public class LeadStatusHelper {
                 
                 if (oldLead != null && newLead.Status == 'Awaiting Customer response' && oldLead.Status != 'Awaiting Customer response' && newLead.Department__c != null) {
                     if (newLead.Department__c == 'Reservations' && queueNameToIdMap.containsKey('Reservation Queue')) {
-                    newLead.OwnerId = queueNameToIdMap.get('Reservation Queue');
-                    System.debug('Assigned to Reservation Queue');
+                        newLead.OwnerId = queueNameToIdMap.get('Reservation Queue');
                     } else if (newLead.Department__c == 'Sales' && queueNameToIdMap.containsKey('Sales Team')) {
                         newLead.OwnerId = queueNameToIdMap.get('Sales Team');
-                        System.debug('Assigned to Sales Team');
                     }
                 }
                 
@@ -41,7 +39,6 @@ public class LeadStatusHelper {
     public static void handleBeforeInsert(List<Lead> newLeadList) {
         try {
             for (Lead leadRec : newLeadList) {
-                System.debug('NEwLEead>>beforeUpdate>>2'+ leadRec);
                 if (leadRec.Case__c != null && leadRec.LeadSource == null) {
                     // Query the related Case and set LeadSource based on Case's Origin field
                     Case caseRecord = [SELECT Origin FROM Case WHERE Id = :leadRec.Case__c LIMIT 1];
@@ -55,30 +52,38 @@ public class LeadStatusHelper {
         }
     }
     public static void beforeUpdateLeadEscalation(List<Lead> newLeads, Map<Id, Lead> oldLeadsMap) { // Added by Sidhant
-        System.debug('beforeUpdateLeadEscalation');
+        Id salesBHId;
+        List<BusinessHours> bhList = [SELECT Id FROM BusinessHours WHERE Name = 'Sales Business Hours' LIMIT 1];
+        if (!bhList.isEmpty()) {
+            salesBHId = bhList[0].Id;
+        }
+        
+        // Pre-fetch Record Types
+        Map<Id, String> recordTypeIdToDevName = new Map<Id, String>();
+        for (RecordType rt : [SELECT Id, DeveloperName FROM RecordType WHERE SObjectType = 'Lead']) {
+            recordTypeIdToDevName.put(rt.Id, rt.DeveloperName);
+        }
+        
         for (Lead newLead : newLeads) {
             Lead oldLead = oldLeadsMap != null ? oldLeadsMap.get(newLead.Id) : null;
             if (oldLead == null) {
                 if (isTargettedProfile(newLead.OwnerId) && newLead.Status == 'Open') {
-                    startTimer(newLead, 2, 1);
+                    startTimer(newLead, 2, 1, recordTypeIdToDevName, salesBHId);
                 }
             } else {
                 if (newLead.OwnerId != oldLead.OwnerId && isTargettedProfile(newLead.OwnerId) && newLead.Status == 'Open') {
-                    startTimer(newLead, 2, 1); // First timer after 30 minutes
+                    startTimer(newLead, 2, 1, recordTypeIdToDevName, salesBHId); // First timer after 30 minutes
                 }
                 if ((oldLead.Status != 'Open' && newLead.Status == 'Open') && isTargettedProfile(newLead.OwnerId)) {
-                    System.debug('In beforeUpdate: Lead Status changed to Open and assigned to Reservation profile.');
-                    startTimer(newLead, 2, 1); // First timer after 30 minutes
+                    startTimer(newLead, 2, 1, recordTypeIdToDevName, salesBHId); // First timer after 30 minutes
                 }
-                if ((newLead.Status == 'Customer Responded' && isTargettedProfile(newLead.OwnerId))) {
-                    System.debug('In beforeUpdate: Lead Status changed to Customer Responded and assigned to Reservation profile.');
+                if (newLead.Status == 'Customer Responded' && isTargettedProfile(newLead.OwnerId) && recordTypeIdToDevName.get(newLead.RecordTypeId) != 'Sales') {
                     abortLeadEscationScheduledJob(newLead.Id);
-                    startTimer(newLead, 2, 1);
+                    startTimer(newLead, 2, 1, null, null);
                 }
-                /*if ((newLead.Status == 'Awaiting Customer response')) {
-                    System.debug('In beforeUpdate: Lead Status changed to Open and assigned to Reservation profile.');
+                if (newLead.Status == 'Awaiting Customer response' && recordTypeIdToDevName.get(newLead.RecordTypeId) == 'Sales') {
                     abortLeadEscationScheduledJob(newLead.Id);
-                }  */              
+                }              
             }
         }
     }
@@ -86,8 +91,8 @@ public class LeadStatusHelper {
     private static void abortLeadEscationScheduledJob(string LeadId){
         String cronName = 'Lead Timer First Check' + leadId;
         String cronName2 = 'Lead Timer Second Check' + leadId;
-            List<String> cronNameList = new List<String>{cronName,cronName2};
-        system.debug('cronName>>>'+cronName);        
+        List<String> cronNameList = new List<String>{cronName,cronName2};
+            system.debug('cronName>>>'+cronName);        
         List<CronTrigger> cronJobs = [SELECT Id, CronJobDetail.Name, State FROM CronTrigger WHERE CronJobDetail.Name IN :cronNameList AND State = 'WAITING' LIMIT 1];
         
         if (!cronJobs.isEmpty()) {
@@ -99,15 +104,17 @@ public class LeadStatusHelper {
         
     }
     
-    private static void startTimer(Lead lead, Integer minutes, Integer level) {  
-        // Lead ldList = [SELECT Id, Name, TAT_deadline__c, Escalation_Level__c FROM Lead Where Id = : leadId];
-        System.debug('Start timeer');
-        lead.TAT_deadline__c = System.now().addMinutes(30);
+    private static void startTimer(Lead lead, Integer minutes, Integer level, Map<Id, String> recordTypeMap, Id salesBHId) { 
+        Datetime deadline = System.now().addMinutes(30); // Default
+        
+        if (lead.Status == 'Open' && recordTypeMap.containsKey(lead.RecordTypeId) && recordTypeMap.get(lead.RecordTypeId) == 'Sales' && salesBHId != null) 
+        {
+            deadline = BusinessHours.add(salesBHId, System.now(), 9 * 60 * 60 * 1000); // 9 business hours
+        }
+        
+        lead.TAT_deadline__c = deadline; //System.now().addMinutes(30);
         lead.Escalation_Level__c = 'Level 1';
-        //   update ldList;
-        System.debug('TAT_deadline__c'+ lead.TAT_deadline__c);
-        System.debug('Escalation_Level__c'+ lead.Escalation_Level__c);
-        Datetime futureTime = System.now().addMinutes(30);
+        Datetime futureTime = deadline; //System.now().addMinutes(30);
         
         // Extract the components for the cron expression
         String cronExp = '0 ' + futureTime.minute() + ' ' + futureTime.hour() + ' ' + futureTime.day() + ' ' + (futureTime.month()) + ' ? ' + futureTime.year();
@@ -119,6 +126,29 @@ public class LeadStatusHelper {
         }
     }
     
+    public static void updateEmailMessageRecords(List<Lead> leadList){
+        Set<Id> caseId = new Set<Id>();
+        Map<Id,Lead> caseToLeadMap = new Map<Id,Lead>();
+        List<EmailMessage> updateEmailMessage = new List<EmailMessage>();
+        for(Lead ld : leadList){
+            caseId.add(ld.Case__c);
+            caseToLeadMap.put(ld.Case__c,ld);
+        }
+        if(!caseId.IsEmpty()){
+            List<EmailMessage> emailMessageRecords = [Select Id,LeadId__c,ParentId  From EmailMessage Where ParentId IN : caseId];
+            for(EmailMessage em : emailMessageRecords){
+                Id leadId = caseToLeadMap.get(em.ParentId).Id;
+                if(leadId != null){
+                    em.LeadId__c = leadId;
+                    updateEmailMessage.add(em);
+                }
+            }}
+        
+        if(!updateEmailMessage.isEmpty()){
+            update updateEmailMessage;
+        }
+    }
+    
     private static Boolean isTargettedProfile(Id ownerId) {
         if(String.valueOf(ownerId).startsWith('005')){
             User owner = [SELECT Profile.Name FROM User WHERE Id = :ownerId LIMIT 1];
@@ -127,6 +157,39 @@ public class LeadStatusHelper {
             return false;
         }
         
+    }
+    
+    private static Map<Id, String> getUserProfiles(Set<Id> userIds) {
+        Map<Id, String> userProfileMap = new Map<Id, String>();
+        for (User u : [SELECT Id, Profile.Name FROM User WHERE Id IN :userIds]) {
+            userProfileMap.put(u.Id, u.Profile.Name);
+        }
+        return userProfileMap;
+    }
+    
+    public static void updateOwnerChangedDate(List<Lead> newLeads, Map<Id, Lead> oldLeadMap) {
+        Set<Id> newUserOwnerIds = new Set<Id>();
+        
+        for (Lead newLead : newLeads) {
+            if (newLead.OwnerId != null && String.valueOf(newLead.OwnerId).startsWith('005')) {
+                newUserOwnerIds.add(newLead.OwnerId);
+            }
+        }
+        
+        Map<Id, String> ownerProfileMap = getUserProfiles(newUserOwnerIds);
+        
+        for (Lead newLead : newLeads) {
+            Lead oldLead = oldLeadMap.get(newLead.Id);
+            
+            if (newLead.OwnerId != oldLead.OwnerId) {
+                //Boolean wasQueue = oldLead.OwnerId != null && String.valueOf(oldLead.OwnerId).startsWith('00G');
+                Boolean isNowUser = newLead.OwnerId != null && String.valueOf(newLead.OwnerId).startsWith('005');
+                String profileName = ownerProfileMap.get(newLead.OwnerId);
+                if (isNowUser && profileName == 'Sales') {
+                    newLead.Target_Closure_Date__c = System.now();
+                }
+            }
+        }
     }
     
     // Handle before insert logic
