--- a/force-app/main/default/classes/MDEN_SaveSaleOrder.cls
+++ b/force-app/main/default/classes/MDEN_SaveSaleOrder.cls
@@ -1,19 +1,19 @@
 /* Created by 	: Maxify Development Team
- * Created Date : 14th Jan, 2025
- * Input 		: None
- * Purpose 		: This API class returns all the salutations
- */
+* Created Date : 14th Jan, 2025
+* Input 		: None
+* Purpose 		: This API class returns all the salutations
+*/
 @RestResource(urlMapping='/save_sale_order/*')    
 global class MDEN_SaveSaleOrder {
     @HttpPost
     global static ReturnResponseWrapper saveSaleOrder() {
         RestRequest request = RestContext.request;
         System.debug('========request.requestBody.toString()====' + request.requestBody.toString());
-
+        
         JSONWrapper customerPostPayload = (JSONWrapper)JSON.deserialize(request.requestBody.toString(), JSONWrapper.class);
         System.debug('======customerPostPayload===' + customerPostPayload);
-         String bookingId;
-         ReturnResponseWrapper response = new ReturnResponseWrapper('');
+        String bookingId;
+        ReturnResponseWrapper response = new ReturnResponseWrapper('');
         // Validate and insert Account
         if (customerPostPayload.customer_post_payload != null) {
             Account acc = new Account(
@@ -23,7 +23,7 @@ global class MDEN_SaveSaleOrder {
                 PersonEmail = customerPostPayload.customer_post_payload.email,
                 PersonMobilePhone = customerPostPayload.customer_post_payload.mobile,
                 PersonGenderIdentity = customerPostPayload.customer_post_payload.gender,
-               //PersonBirthdate = customerPostPayload.customer_post_payload.dob,
+                //PersonBirthdate = customerPostPayload.customer_post_payload.dob,
                 BillingCity = customerPostPayload.customer_post_payload.city,
                 BillingCountry = customerPostPayload.customer_post_payload.country_id,
                 Pin_Code__c = customerPostPayload.customer_post_payload.pincode
@@ -31,11 +31,21 @@ global class MDEN_SaveSaleOrder {
             insert acc;
             System.debug('Inserted Account: ' + acc.Id);
         }
-
+        
         // Validate and insert Airport record (assuming Airport__c is a custom object)
         if (customerPostPayload.save_sale_order_post != null) {
+             String EncalmCode='EN';
+            String airportCode='';
+            String serviceTypeCode= customerPostPayload.save_sale_order_post.service_type;
+            String combineCode= '';
+            if (serviceTypeCode == 'Arrival') {
+                airportCode = customerPostPayload.save_sale_order_post.to_airport;
+            } else {
+                airportCode = customerPostPayload.save_sale_order_post.from_airport;
+            }
+            combineCode = EncalmCode + airportCode + LeadConversionController.getServiceCode(serviceTypeCode) + LeadConversionController.generateNewBookingNumber();
             Opportunity booking = new Opportunity(
-                Name = 'ADL',
+                Name = combineCode,
                 StageName = 'Qualification',
                 closeDate = date.today(),
                 Service_Type__c = customerPostPayload.save_sale_order_post.service_type,
@@ -47,17 +57,17 @@ global class MDEN_SaveSaleOrder {
                 Flight_Number_Arrival__c = customerPostPayload.save_sale_order_post.arrival_flight,
                 Departure_Airline__c = customerPostPayload.save_sale_order_post.departure_airline,
                 Flight_Number_Departure__c = customerPostPayload.save_sale_order_post.departure_flight,
-               Sector__c = customerPostPayload.save_sale_order_post.traver_sector ,
-               Arrival_Service_Time__c = customerPostPayload.save_sale_order_post.arrival_time ,
-               Departure_Service_Time__c = customerPostPayload.save_sale_order_post.departure_time,
-              Arrival_Terminal__c = customerPostPayload.save_sale_order_post.arrival_term,
-              Departure_Terminal__c  = customerPostPayload.save_sale_order_post.departure_term,
-               Number_of_Adults__c = customerPostPayload.save_sale_order_post.no_of_adult,
+                Sector__c = customerPostPayload.save_sale_order_post.traver_sector ,
+                Arrival_Service_Time__c = customerPostPayload.save_sale_order_post.arrival_time ,
+                Departure_Service_Time__c = customerPostPayload.save_sale_order_post.departure_time,
+                Arrival_Terminal__c = customerPostPayload.save_sale_order_post.arrival_term,
+                Departure_Terminal__c  = customerPostPayload.save_sale_order_post.departure_term,
+                Number_of_Adults__c = customerPostPayload.save_sale_order_post.no_of_adult,
                 Number_of_Children__c= customerPostPayload.save_sale_order_post.no_of_children,
-               Number_of_Infants__c = customerPostPayload.save_sale_order_post.no_of_infants,
-               Payment_Ref_No__c = customerPostPayload.save_sale_order_post.payment_ref_no
-          
-         );
+                Number_of_Infants__c = customerPostPayload.save_sale_order_post.no_of_infants,
+                Payment_Ref_No__c = customerPostPayload.save_sale_order_post.payment_ref_no
+                
+            );
             insert booking;
             bookingId = booking.Id;
             if(booking != null){
@@ -68,71 +78,93 @@ global class MDEN_SaveSaleOrder {
                     Country_code__c = customerPostPayload.save_sale_order_post.placard_country_code,
                     Mobile__c   = customerPostPayload.save_sale_order_post.placard_mobile
                 );
-           
+                
                 if(passengerDetails != null ){
                     insert passengerDetails;
                 }
             }
             System.debug('Inserted Airport: ' + booking.Id);
         }
-
-        // Validate and insert Product records
-       if (customerPostPayload.sale_order_item_payload != null && !customerPostPayload.sale_order_item_payload.isEmpty()) {
-            List<OpportunityLineItem> productList = new List<OpportunityLineItem>();
-            for (ItemPayload item : customerPostPayload.sale_order_item_payload) {
-                OpportunityLineItem product = new OpportunityLineItem(
-                   // ProductCode = item.product_id,//field not writeable
-                    // Name = item.name,//field not writeable
+        Set<String> reqPrduct = new Set<String>();  
+        List<String> prodName = new  List<String>(); 
+        
+        for (ItemPayload item : customerPostPayload.sale_order_item_payload) {
+            prodName.add(item.name);
+            reqPrduct.add(String.valueOf(item.product_id));
+        }
+        
+        Pricebook2 standardPb = [SELECT Id FROM Pricebook2 WHERE IsStandard = true LIMIT 1];
+        Opportunity oppToUpdate = [SELECT Id FROM Opportunity WHERE Id = :bookingId];
+        oppToUpdate.Pricebook2Id = standardPb.Id;
+        update oppToUpdate;
+        System.debug('oppToUpdate==>'+oppToUpdate) ;       
+        Id pricebookId = oppToUpdate.Pricebook2Id;
+        Set<String> productIds = new Set<String>();      
+        for (ItemPayload item : customerPostPayload.sale_order_item_payload) {
+            productIds.add(String.ValueOf(item.product_id));
+        }
+        Map<String, Product2> productMap = new Map<String, Product2>(  [SELECT Id, Name FROM Product2 WHERE Id IN :productIds]);
+        Map<String, PricebookEntry> pbeMap = new Map<String, PricebookEntry>();
+        List<PricebookEntry> pbeList = [ SELECT Id, Product2.ProductCode  FROM PricebookEntry WHERE Pricebook2Id = :pricebookId 
+                                        AND Product2Id IN :productIds AND Pricebook2Id = :standardPb.Id AND Product2Id IN : reqPrduct];
+        System.debug('pbeList===>'+pbeList);
+        for (PricebookEntry pbe : pbeList) {
+            pbeMap.put(pbe.Product2Id, pbe);
+        }
+        // Create Opportunity Line Items
+        List<OpportunityLineItem> oliList = new List<OpportunityLineItem>();
+        for (ItemPayload item : customerPostPayload.sale_order_item_payload) {
+            prodName.add(item.name);
+            if (pbeMap.containsKey(String.ValueOf(item.product_id))) {
+                OpportunityLineItem oli = new OpportunityLineItem(
                     OpportunityId = bookingId,
-                    Product2Id = '01tH30000010y6lIAA',
-                    PricebookEntryId  = '01uH3000000tc0dIAA',
+                    PricebookEntryId = pbeMap.get(String.ValueOf(item.product_id)).Id,
                     Quantity = item.product_uom_qty,
                     UnitPrice = item.price_unit
-                   // Subtotal = item.price_subtotal field not writeable
                 );
-                productList.add(product);
+                oliList.add(oli);
             }
-            if (!productList.isEmpty()) {
-                insert productList;
-                System.debug('Inserted Products: ' + productList);
-            }
-           
-           
         }
+        // Insert Line Items
+        if (!oliList.isEmpty()) {
+            insert oliList;
+        }
+        System.debug('=====oliList====>'+oliList);
+        
         if (customerPostPayload.sale_order_guest_payload != null && !customerPostPayload.sale_order_guest_payload.isEmpty()) {
             List<Passenger_Details__c> passengerDetailsList = new List<Passenger_Details__c>();
             for (GuestPayload guestPayload : customerPostPayload.sale_order_guest_payload) {
-            
-              Passenger_Details__c  passengerDetails = new Passenger_Details__c(
-                  Opportunity_ID__c = bookingId,
-                  Title__c = guestPayload.title,
-                  First_Name__c  = guestPayload.first_name,
-                  Last_Name__c  = guestPayload.last_name,
-                  Country_code__c = guestPayload.country_code,
-                  Mobile__c   = guestPayload.mobile,
-                  Travel_Class__c = guestPayload.class_type,
-                  Passport_No__c = guestPayload.passport_no,
-                  Travel_PNR_No__c   = guestPayload.pnr_no,
-                  Gender__c  = guestPayload.gender,
-                  Age__c  = guestPayload.age
-                 );
+                
+                Passenger_Details__c  passengerDetails = new Passenger_Details__c(
+                    Opportunity_ID__c = bookingId,
+                    Title__c = guestPayload.title,
+                    First_Name__c  = guestPayload.first_name,
+                    Last_Name__c  = guestPayload.last_name,
+                    Country_code__c = guestPayload.country_code,
+                    Mobile__c   = guestPayload.mobile,
+                    Travel_Class__c = guestPayload.class_type,
+                    Passport_No__c = guestPayload.passport_no,
+                    Travel_PNR_No__c   = guestPayload.pnr_no,
+                    Gender__c  = guestPayload.gender,
+                    Age__c  = guestPayload.age
+                );
                 passengerDetailsList.add(passengerDetails);
             }
             if(!passengerDetailsList.IsEmpty()){
-                  insert passengerDetailsList ;
+                insert passengerDetailsList ;
             }
-         // GetResponseWrapper response = new GetResponseWrapper('');
+            // GetResponseWrapper response = new GetResponseWrapper('');
         }
         return response    = new ReturnResponseWrapper(bookingId);
     }
-
+    
     global class JSONWrapper {
         global CustomerPostPayload customer_post_payload;
         global SaveSaleOrderPost save_sale_order_post;
         global List<ItemPayload> sale_order_item_payload;
         global List<GuestPayload> sale_order_guest_payload;
     }
-
+    
     global class CustomerPostPayload {
         global String partner_id;
         global String title;
@@ -151,7 +183,7 @@ global class MDEN_SaveSaleOrder {
         global String tnc;
         global String mkt_comm;
     }
-
+    
     global class SaveSaleOrderPost {
         global String service_type;
         global String commitment_date;
@@ -179,15 +211,15 @@ global class MDEN_SaveSaleOrder {
         global String placard_mobile;
         global String payment_ref_no;
     }
-
+    
     global class ItemPayload {
-        global Integer product_id;
+        global String product_id;
         global String name;
         global Integer product_uom_qty;
         global Decimal price_unit;
         global Decimal price_subtotal;
     }
-
+    
     global class GuestPayload {
         global String title;
         global String first_name;
@@ -201,9 +233,9 @@ global class MDEN_SaveSaleOrder {
         global String country_code;
         global Integer parent_id;
     }
-      global class ReturnResponseWrapper {
+    global class ReturnResponseWrapper {
         global String Id; 
-       global ReturnResponseWrapper(String Id) {
+        global ReturnResponseWrapper(String Id) {
             this.Id = Id;
             
         }        
